--- a/style.css
+++ b/style.css
@@ -3,11 +3,11 @@ body {
 }
 .container {
   text-align: center;
-  background-image: url("oceansmall.jpg");
+  background-image: url("47539489_ml.jpg");
   background-repeat:no-repeat;
   background-size: cover;
   height: 100%;
-  font-family: HelveticaNeue;
+  font-family: Helvetica;
   color: white;
   text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }
